--- a/package.json
+++ b/package.json
@@ -17,18 +17,26 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
+    "konva": "^9.3.20",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-transpile-modules": "^10.0.1",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3",
     "react-leaflet": "^5.0.0",
+    "react-use-gesture": "^9.1.3",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
